修改：更改颜色

--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -195,7 +195,7 @@
     "message": "详情请参考https://developer.chrome.com/extensions/permission_warnings。"
   },
   "des_pers1": {
-    "message": "你随时可以从以下位置删除这些权限：设置》通用选项》权限管理。"
+    "message": "你随时可以从以下位置删除这些权限：设置 - 通用选项 - 权限管理。"
   },
   "des_linux": {
     "message": "由于非Windows平台上，鼠标右键菜单与鼠标手势的操作有冲突，才采用这种折中的方案来保障手势的正常运行。"
@@ -1032,7 +1032,7 @@
     "message": "获取权限成功！请重试上一个操作。某些情况下，需要重启浏览器才能生效！<br \/>当前页面将在以下倒计时后关闭  "
   },
   "getper_des1": {
-    "message": "你随时可以从以下位置删除这些权限：设置》通用选项》权限管理。"
+    "message": "你随时可以从以下位置删除这些权限：设置 - 通用选项 - 权限管理。"
   },
   "getper_fail": {
     "message": "获取权限失败！请将浏览器升级到最新版再试。"
